fix font-size issues in Safari on iPhone

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,11 @@ body {
     font-size : 0.70em;
 	font-weight : normal;
 	line-height	: normal;
+/* Prevent mobile zooming while remain desktop zooming.
+   github.com/shichuan/mobile-html5-boilerplate/issues/closed#issue/14
+ */
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: none;
 }
 
 
@@ -89,13 +94,6 @@ body {
 h1 {
 	font-size:2em; 
 	font-weight:normal;
-}
-
-
-h1 a {
-	font-size:1em !important; 
-	font-weight:normal !important;
-    cursor: default;
 }
 
 
